Add contents to the portfolio
Signed-off-by: Kai Gao <emiapwil@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ plugins:
   - jekyll-remote-theme
 
 locale: "zh"
+collections:
+  portfolio:
 
 # Exclude from processing.
 # The following items will not be processed, by default.
