--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -142,10 +142,10 @@ zh: &DEFAULT_ZH
     list:
       - title: "统一控制"
         desc: "除了数据包头部中包含的各层协议属性之外，虚拟网络功能可以为不同粒度的数据包提供更加灵活的、应用层相关的属性。TridentNPL提供了*流属性*抽象，在网络功能虚拟化与软件定义网络融合的网络中实现基于属性的网络控制。"
-        icon: fas fa-gears
+        icon: fas fa-angle-up
       - title: "三值逻辑"
         desc: "虚拟网络功能获取属性的过程是异步的，传统的二值条件判断无法表达属性获取过程中的控制逻辑。TridentNPL引入了*三值逻辑*，允许对未知状态的数据包进行显式控制，保证了网络控制的完整性"
-        icon: fas fa-shopping-cart #find more at https://fontawesome.com/icons
+        icon:  fas fa-sign-in-alt  #find more at https://fontawesome.com/icons
       - title: "路由代数"
         desc: "TridentNPL引入路由代数，将路径集合作为基本的路由管理单元，允许系统将不同的路由计算方法进行组合，并且对网络中的路径按照属性、路径标点等特征进行选择。"
         icon: fas fa-bezier-curve
